...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/exo_fullscreen"
                style="@style/ExoMediaButton"
                android:gravity="right"
                android:src="@drawable/ic_fullscreen" />

            <ImageButton
                android:id="@+id/exo_fullscreen_exit"
                style="@style/ExoMediaButton"
                android:gravity="right"
                android:src="@drawable/ic_fullscreen_exit"
                android:visibility="gone" />

        </LinearLayout>
...
