...
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:layout_marginBottom="@dimen/activity_vertical_margin_list"
        android:background="@android:color/darker_gray" />
    <!--Static fragment layout that display a list of ingredients-->
    <fragment
        android:id="@+id/ingredient_fragment"
        android:name="com.example.android.bakingapp.ui.IngredientsFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_weight="1" />
...
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:layout_marginBottom="@dimen/activity_vertical_margin_list"
        android:background="@android:color/darker_gray" />
    <!--Static fragment layout that display a list of steps-->
    <fragment
        android:id="@+id/step_fragment"
        android:name="com.example.android.bakingapp.ui.StepsFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
...
