...
            android:src="@drawable/placeholder"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
        <TextView
            android:id="@+id/instructions"
            android:layout_width="123dp"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/iv_thumbnail_url"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
...
